[project]
name = "seedboxsync"
description = "Script for sync operations between your NAS and your seedbox"
dynamic = ["version"]
authors = [
  { name = "Guillaume Kulakowski", email = "guillaume@kulakowski.fr" }
]
keywords = [
  "seedbox",
  "nas",
  "sync",
  "ftp",
  "sftp",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: System Administrators",
  "Topic :: Internet",
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Natural Language :: English",
  "Operating System :: POSIX"
]
readme = "README.md"
license-files = ["LICENSE"]
license = "GPL-3.0-only"
requires-python = ">=3.10"
dependencies = [
  "cement>=3.0.14",
  "pyyaml>=6.0.2",
  "colorlog>=6.9.0",
  "paramiko>=3.5.1",
  "ftputil>=5.1.0",
  "bcoding",
  "tabulate>=0.9.0",
  "humanize>=4.12.1",
  "peewee>=3.17.7",
  "typing-extensions>=4.13.2"
]

[project.urls]
Home = "https://llaumgui.github.io/seedboxsync/"
Documentation = "https://llaumgui.github.io/seedboxsync/"
Source = "https://github.com/llaumgui/seedboxsync/"

[project.optional-dependencies]
dev = [
  "flake8",
  "pytest",
  "pytest-cov",
  "coverage",
  "flit",
  "mypy",
  "twine",
  "cement[cli]",
  "mkdocs-material",
]

[project.scripts]
seedboxsync = "seedboxsync.main:main"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
  "config/seedboxsync.yml.example",
  "README.md",
  "LICENSE"
]
exclude = [
  ".github/**",
  "docker/**",
  "doc/**",
  "logo/**",
  "tests/**",
  ".dockerignore",
  ".editorconfig",
  ".flake8",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint.yaml",
  "Dockerfile",
  "Makefile",
  "sonar-project.properties",
]

[tool.mypy]
files = ["seedboxsync"]
ignore_missing_imports = true
strict = true
show_error_codes = true