[project]
name = "seedboxsync"
description = "Application for sync operations between your NAS and your seedbox"
dynamic = ["version"]
authors = [
  { name = "Guillaume Kulakowski", email = "guillaume@kulakowski.fr" }
]
keywords = [
  "seedbox",
  "nas",
  "sync",
  "sftp",
  "ftp",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: System Administrators",
  "Topic :: Internet",
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Operating System :: POSIX"
]
readme = "README.md"
license-files = ["LICENSE"]
license = "GPL-3.0-only"
requires-python = ">=3.10"
dependencies = [
  "peewee>=3.17.7",
  "paramiko>=3.5.1",
  "ftputil>=5.1.0",
  "tabulate",
  "humanize",
  "bcoding",
  "typing-extensions",
  "flask",
  "click",
  "Flask-Caching",
  "Flask-Babel",
  "flask-restx",
]

[project.urls]
Home = "https://llaumgui.github.io/seedboxsync/"
Documentation = "https://llaumgui.github.io/seedboxsync/"
Source = "https://github.com/llaumgui/seedboxsync/"

[project.optional-dependencies]
dev = [
  "flake8",
  "Flake8-pyproject",
  "black",
  "pytest",
  "pytest-cov",
  "coverage",
  "flit",
  "mypy",
  "twine",
  "mkdocs-material",
]

[project.scripts]
seedboxsync = "seedboxsync.cli:cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
  "seedboxsync/front/static/dist/**",
  "README.md",
  "LICENSE"
]
exclude = [
  ".github/**",
  "docker/**",
  "screenshots/**",
  "doc/**",
  "logo/**",
  "tests/**",
  ".dockerignore",
  ".editorconfig",
  ".flake8",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint.yaml",
  "Dockerfile",
  "Makefile",
  "package.json",
  "package-lock.json",
  "sonar-project.properties",
  "vite.config.js",
]

[tool.mypy]
files = ["seedboxsync"]
ignore_missing_imports = true
strict = true
show_error_codes = true
pretty = true

[tool.flake8]
ignore = ["W504"]
max-line-length = 160
exclude = [
  "*.egg",
  "build/*",
  "docs/*"
]
select = ["E", "W", "F"]

[tool.black]
line-length = 160

[tool.coverage.report]
omit = [
    "*/templates/*",
    "*/static/*",
]