#
# Project
#
[project]
name = "seedboxsync"
description = "Application for sync operations between your NAS and your seedbox"
dynamic = ["version"]
authors = [
  { name = "Guillaume Kulakowski", email = "guillaume@kulakowski.fr" }
]
keywords = [
  "seedbox",
  "nas",
  "sync",
  "sftp",
  "ftp",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: System Administrators",
  "Topic :: Internet",
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Operating System :: POSIX"
]
readme = "README.md"
license-files = ["LICENSE"]
license = "GPL-3.0-only"
requires-python = ">=3.10"
dependencies = [
  "peewee",
  "paramiko",
  "ftputil",
  "tabulate",
  "humanize",
  "huey",
  "bcoding",
  "typing-extensions",
  "flask",
  "click",
  "Flask-Caching",
  "Flask-Babel",
  "flask-restx",
]

[project.urls]
Home = "https://llaumgui.github.io/seedboxsync/"
Documentation = "https://llaumgui.github.io/seedboxsync/"
Source = "https://github.com/llaumgui/seedboxsync/"

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "pytest-cov",
  "coverage",
  "flit",
  "mypy",
  "twine",
  "mkdocs-material",
]

[project.scripts]
seedboxsync = "seedboxsync.cli:cli"

#
# Build
#
[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

#
# flit
#
[tool.flit.sdist]
include = [
  "seedboxsync/front/static/dist/**",
  "README.md",
  "LICENSE"
]
exclude = [
  ".github/**",
  "docker/**",
  "screenshots/**",
  "doc/**",
  "logo/**",
  "tests/**",
  ".dockerignore",
  ".editorconfig",
  ".flake8",
  ".gitignore",
  ".hadolint.yaml",
  ".markdownlint.yaml",
  "Dockerfile",
  "justfile",
  "package.json",
  "package-lock.json",
  "sonar-project.properties",
  "vite.config.js",
]

#
# mypy
#
[tool.mypy]
files = ["seedboxsync"]
ignore_missing_imports = true
strict = true
show_error_codes = true
pretty = true

#
# ruff
#
[tool.ruff]
line-length = 160
target-version = "py314"
src = ["seedboxsync", "tests"]

[tool.ruff.lint]
select = [
    # Core
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings

    # Imports
    "I",      # isort

    # Bugs
    "B",      # flake8-bugbear
    "A",      # builtins
    "C4",     # comprehensions
    "SIM",    # simplify
    "RET",    # return
    "RSE",    # raise
    "TRY",    # tryceratops

    # Good practices
    "UP",     # pyupgrade
    "PIE",    # misc improvements
    "T20",    # print()
    "PTH",    # pathlib
    "G",      # logging
    "LOG",    # logging
    "RUF",    # Ruff-specific
    "ISC",    # implicit string concat

    # Documentation
    "D",      # pydocstyle

    # Type annotations
    "ANN",

]
ignore = [
    # Docstrings
    "D205",
    "D212",

    # Too opinionated
    "TRY003",

    # logging
    "G004",

    # pathlib
    "PTH100",
    "PTH111",
    "PTH118",
    "PTH119",
    "PTH120",
    "PTH207",
    "PTH208",

    # Type hints
    "ANN401",     # Any
]
exclude = [
  "*.egg",
  "build/*",
  "docs/*"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["seedboxsync"]
no-lines-before = ["standard-library", "third-party", "first-party", "local-folder"]
force-sort-within-sections = true
combine-as-imports = true

[tool.ruff.lint.pycodestyle]
max-line-length = 160

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",
    "ANN",
]
"**/__init__.py" = [
    "D104"
]

#
# PyTest coverage
#
[tool.coverage.report]
omit = [
    "*/templates/*",
    "*/static/*",
]